--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jstransformer-md",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "markdown-it support for JSTransformers.",
   "keywords": [
     "jstransformer",
@@ -11,7 +11,7 @@
   ],
   "dependencies": {
     "markdown-it": "^9.0.1",
-    "markdown-it-footnote": "^3.0.2"
+    "markdown-it-footnote-6du": "^3.0.2"
   },
   "devDependencies": {
     "markdown-it-container": "^2.0.0",
